versus testing refactor